objects/Referral__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Family</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Referred By</relationshipLabel>
        <relationshipName>Referrals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stakeholder_Account__c</fullName>
        <label>Stakeholder Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only accounts with stakeholder record type will be allowed to be added.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Stakeholder</value>
            </filterItems>
            <infoMessage>Only accounts with stakeholder record type will be allowed to be added.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Stakeholder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stakeholder</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only contacts from stakeholder account with stakeholder record type will be allowed to add.</errorMessage>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Stakeholder</value>
            </filterItems>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Stakeholder_Account__c</valueField>
            </filterItems>
            <infoMessage>Only contacts from stakeholder account with stakeholder record type will be allowed to add.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only student related to parent account is allowed</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Child</value>
            </filterItems>
            <infoMessage>Only student related to parent account is allowed</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Referral</relationshipLabel>
        <relationshipName>Referral</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Referral</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RN-{000000}</displayFormat>
        <label>Referral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>